[package]
name = "stars"
version = "0.1.0"
authors = ["Steve Condylios <steve.condylios@reece.com.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "*" # star means run any version
serde = "*"
serde_json = "*"